# OpenParticle

./: .gitignore  4_1.ipynb  CITATION.cff  FockHashMapTests.ipynb  FockState.py  HashMapTest.ipynb  LICENSE  OpenParticleDocs.ipynb  ParticleOperator.py  README.md  UFapp.pages  UnitaryFundApplication.pages  Untitled.ipynb  coeffCheck.ipynb  fermion-and-boson.py  get_states.py  hello_carter.txt  normal_order_test.ipynb  op_test.py  pyproject.toml  qcd_hamiltonian.py  qubit_mappings.py  qubit_op_mappings.py  requirements.txt  test6.txt
.github/workflows/: python-package.yml
.ipynb_checkpoints/: 4_1-checkpoint.ipynb  OpenParticleDocs-checkpoint.ipynb
Benchmarks/: benchmark-boson.py  benchmark-graph.py  benchmark_test.ipynb  time-diff.py
Docs/: OpenParticleDocs.ipynb  QCD_Docs.ipynb  Untitled-1.ipynb
QCD/: Color.py  get_quantum_nums.py  hadron.py  qcd_hamiltonian.py
models/: README.md
models/QCD/: __init__.py  hadron.py  qcd_hamiltonian.ipynb  qcd_hamiltonian.py
models/Yukawa/: Eigensystem_Calculation.ipynb  Yukawa_RGPGP.ipynb  bound_state.ipynb  costs.ipynb  evolution.py  states.py  (+6 more)
openparticle/: __init__.py  base.py  dlcq.py  fields.py  fock.py  fockstate.py  full_dlcq.py  generate_pairing_ham.py  generate_two_body_ham.py  hamiltonians.py  oputils.py  particleoperator.py  qubit_mappings.py  src.py  test_gen_ham.ipynb  test_mapping.ipynb  utils.py
tests/: test_chemistry.py  test_cicd.py  test_class_integration.py  test_fockstate.py  test_normal_order.py  test_particleoperator.py  test_particleoperator_fock_relations.py  test_qubit_mappings.py  test_utils.py
(+42 files in other folders)
